style.css
@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Bellefair&display=swap');
/* ------------------------ General Styles ------------------------ */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
ul {
    list-style: none;
}
a {
    text-decoration: none;
}
body {
    min-height: 100vh;
    background-size: cover;
}
body main h5 {
    padding-top: 40px;
    padding-left: 50px;
}
/* ------------------------ Typography ------------------------ */ 
h1, h2, h3, h4, .sub-heading-1 {
    font-family: 'Bellefair', serif;
    text-transform: uppercase;
    font-weight: 400;
    color: white;
}
h5, .sub-heading-2, .navbar-list-item-link, .dest-nav-item {
    font-family: 'Barlow Condensed', sans-serif;
    text-transform: uppercase;
    font-weight: 400;
}
h1 {
    font-size: 150px;
}
h2 {
    font-size: 100px;
}
h3 {
    font-size: 56px;
}
h4 {
    font-size: 32px;
}
h5, .sub-heading-1 {
    font-size: 28px;
    color: var(--light-blue);
}
h5 span {
    color: rgba(151, 151, 151, 0.4);
    font-weight: bold;
    margin-right: 5px;
}
.sub-heading-2 {
    color: var(--light-blue);
}
.sub-heading-2 {
    font-size: 14px;
}
.navbar-list-item-link {
    font-size: 16px;
    padding-bottom: 24.5px;
    color: var(--light-blue);
}
.active {
    border-bottom: 1.5px solid white !important;
    color: white;
}
.navbar-list-item-link:hover {
    border-bottom: 1.5px solid rgba(208, 214, 249, 0.5);
    color: white;
}
.navbar-list-item-link span{
    font-weight: bold;
    margin-right: 5px;
    color: white;
    display: inline-block;
}
p {
    font-family: 'Barlow Condensed', sans-serif;
    font-size: 16px;
    color: var(--light-blue);
    line-height: 26px;
}
/* ------------------------ Variables ------------------------ */
:root {
    --dark-blue: #0B0D17;
    --light-blue: #D0D6F9;
}
/* ------------------------ Home Page ------------------------ */ 
.home-body {
    background-image: url(./assets/home/background-home-desktop.jpg);
}
/* ------------------------ Navbar ------------------------ */ 
header {
    display: flex;
    justify-content: space-between;
    padding: 30px 0 0 20px;
}
header .logo-container {
    display: flex;
    justify-content: center;
    align-items: center;
    padding-left: 20px;
    position: relative;
}
header .logo-container img{
    height: 40px;
    width: 40px;
}
.nav {
    backdrop-filter: blur(50px);
    display: flex;
}
.navbar {
    display: flex;
    gap: 30px;
    padding: 25px 70px;
    background-color: transparent;
    z-index: 2;
}
.logo-container::after {
    content: '';
    position: absolute;
    left: 90px;
    width: 55vw;
    top: 50%;
    height: 1px;
    background-color: var(--light-blue);
    opacity: 0.2;
    z-index: 1;
}
/* ------------------------ Responsive Navbar ------------------------ */
.nav .hamburger, .close-nav {
    background-color: transparent;
    outline: none;
    border: none;
    cursor: pointer;
    display: none;
}
.nav .close-nav {
    margin: 30px;
}
.nav .hamburger {
    margin-right: 30px;
    margin-top: 30px;
}
/* ------------------------ Main Content ------------------------ */ 
.home-body main {
    display: flex;
    align-items: center;
    padding: 12% 50px 50px 50px;
    gap: 50px;
}
.home-body main h5 {
    padding: 0;
}
.home-body main .left-part {
    flex: 1;
    display: flex;
    flex-direction: column;
    gap: 10px;
}
.home-body main .right-part {
    flex: 1;
    align-self: flex-end;
    display: flex;
    justify-content: center;
}
.home-body main .right-part button {
    font-family: 'Bellefair', serif;
    outline: none;
    border: none;
    background-color: white;
    color: var(--dark-blue);
    padding: 80px 40px ;
    border-radius: 50%;
    font-size: 28px;
    text-transform: uppercase;
    cursor: pointer;
}
.home-body main .right-part button:hover {
    outline: 30px solid rgba(151, 151, 151, 0.4);
}
/* ------------------------ Destination Page ------------------------ */ 
.destination-body {
    background-image: url(./assets/destination/background-destination-desktop.jpg);
}
.dest-content {
    display: flex;
    gap: 30px;
}
.dest-content .left-part {
    flex: 1;
    padding: 40px;
    display: flex;
    justify-content: center;
}
.dest-content .left-part img {
    width: 400px;
    object-fit: contain;
}
.dest-content .right-part {
    flex: 1;
    display: flex;
    flex-direction: column;
    padding-top: 40px;
    justify-content: flex-start;
}
.right-part .dest-nav ul {
    display: flex;
    gap: 30px;
    padding-left: 5px;
    margin-bottom: 20px;
}
.dest-nav-item {
    font-size: 16px;
    padding-bottom: 10px;
    color: var(--light-blue);
    text-transform: uppercase;
    cursor: pointer;
}
.active-dest {
    border-bottom: 1.5px solid white !important;
    color: white;
}
.dest-nav-item:hover {
    color: white;
    border-bottom: 1.5px solid rgba(162, 174, 247, 0.5);
}
.dest-content .right-part p {
    margin-right: 100px;
    padding-bottom: 30px;
    text-align: justify;
    border-bottom: 1.5px solid rgba(208, 214, 249, 0.5);
}
.dest-info-container {
    margin-right: 100px;
    margin-top: 20px;
    display: flex;
    justify-content: space-between;
}
.dest-info-container h6 {
    margin-bottom: 10px;
}
.content-hidden {
    display: none;
}
.content-visible {
    display: block;
}
/* ------------------------ Crew Page ------------------------ */ 
.crew-body {
    background-image: url(./assets/crew/background-crew-desktop.jpg);
}
.crew-content {
    gap: 40px;
}
.crew-content .left-part {
    width: 50%;
    display: flex;
    flex-direction: column;
    gap: 100px;
    padding: 20vh 0 50px 50px;
}
.crew-content .left-part h4 {
    color: var(--light-blue);
}
.crew-nav {
    position: absolute;
    bottom: 10%;
    left: 55px;
}
.crew-nav ul{
    display: flex;
    gap: 12px;
}
/* ... */

